# sample-uv-lib

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  main.py.backup  pyproject.toml
api/: Dockerfile  pyproject.toml
mylib/: README.md  pyproject.toml
mylib/src/mylib/: __init__.py  main.py
