[project]
name = "sample-uv-lib"
version = "0.1.0"
description = "Sample UV library project"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "mylib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-select = ["I"]  # Enable isort rules
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I"]  # pycodestyle errors, warnings, pyflakes, isort
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.workspace]
members = [
    "mylib",
]

[tool.uv.sources]
mylib = { workspace = true }

[tool.ruff.lint.isort]
known-first-party = ["sample_uv_lib"]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true
